# LabProj

./: CMakeLists.txt  ConcreteObserver.h  File.cpp  File.h  LoadResources.cpp  LoadResources.h  MainWindow.cpp  MainWindow.h  Observer.h  README.md  Subject.h  main.cpp
LabProj.app/Contents/: Info.plist
test/: CMakeLists.txt  Test.cpp  TestFile.cpp  TestLoadResources.cpp  TestObserver.cpp  TestResources.cpp  runAllTests.cpp
